--- a/_data/social.yml
+++ b/_data/social.yml
@@ -18,11 +18,11 @@ stack_overflow:
 stack_exchange:
 steam:
 tumblr:
-twitter:
+twitter: SniperYuni
 vimeo:
 wordpress:
-youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
-twitch: sirrandoo
+youtube: UCSVx5tXgAOGKauNQ7p70GHA
+twitch: SniperYuni
 tiktok:
 
 # Share button options
